# transmission-renderer

./: .gitignore  .gitmodules  Cargo.toml  after.tracy  compile-hlsl-shaders.bat  compile-rt-shaders.bat  compile-shaders.bat  compile-shaders.sh  output  readme.md  renderdoc.cap  shader.spv  todo.md  tracy_trace.tracy  transmission_f32.tracy
ash-reflect/: Cargo.toml
ash-reflect/src/: lib.rs
compiled-shaders/normal/: assign_lights_to_clusters.spv  assign_lights_to_froxels.spv  cluster_debugging_fs.spv  cluster_debugging_vs.spv  debugging_cluster_debugging_fs.spv  debugging_cluster_debugging_vs.spv  deferred_defer_alpha_clip.spv  deferred_defer_opaque.spv  deferred_render.spv  deferred_vs.spv  demultiplex_draws.spv  depth_pre_pass_alpha_clip.spv  depth_pre_pass_fragment_alpha_clip.spv  depth_pre_pass_instanced.spv  depth_pre_pass_vertex.spv  depth_pre_pass_vertex_alpha_clip.spv  fragment.spv  fragment_normal.spv  fragment_opaque.spv  fragment_tonemap.spv  fragment_transmission.spv  frustum_culling.spv  fullscreen_tri.spv  particle_sim.spv  particle_vs.spv  solid_colour.spv  vertex_fullscreen_tri.spv  vertex_instanced.spv  vertex_instanced_with_scale.spv  write_cluster_data.spv  write_froxel_data.spv
compiled-shaders/ray-tracing/: acceleration_structure_debugging.spv  debugging_acceleration_structure_debugging.spv  deferred_render.spv  filter_pass_0.spv  filter_pass_1.spv  filter_pass_2.spv  fragment.spv  fragment_normal.spv  fragment_opaque.spv  fragment_sun_shadow.spv  fragment_sun_shadows_only.spv  fragment_transmission.spv  ray_trace_sun_shadow.spv  reconstruct_shadow_buffer.spv  sun_shadow.spv  tile_classification.spv
glam-pbr/: Cargo.toml
glam-pbr/src/: lib.rs
shader/: Cargo.toml  filter_passes.hlsl  shared.h  tile_classification.hlsl
shader/src/: asm.rs  debugging.rs  deferred.rs  depth_pre_pass.rs  fragment.rs  lib.rs  lighting.rs  noise.rs  tonemapping.rs  vertex.rs
shared-structs/: Cargo.toml
shared-structs/src/: lib.rs
src/: acceleration_structures.rs  command_graph.rs  descriptor_set_layouts.rs  descriptor_sets.rs  main.rs  model_loading.rs  pipelines.rs  profiling.rs  recording.rs  render_passes.rs
thread-pool/: Cargo.toml
thread-pool/src/: lib.rs
